# python-template

./: LICENSE  LICENSE.txt  README.md  copier.yml
python-basic/{{cookiecutter.name}}/: .gitignore  setup.cfg
python-basic/{{cookiecutter.name}}/{{cookiecutter.module_name}}/: __main__.py
python-cli/: cookiecutter.json
python-cli/{{cookiecutter.name}}/: .gitignore  MANIFEST.in  requirements.txt  setup.cfg  setup.py
python-cli/{{cookiecutter.name}}/{{cookiecutter.module_name}}/: __init__.py  __main__.py
python-cli/{{cookiecutter.package_name}}/: .gitignore  MANIFEST.in  pyproject.toml
python-cli/{{cookiecutter.package_name}}/src/{{cookiecutter.module_name}}/: __main__.py
python-cli/{{cookiecutter.package_name}}/tests/: test_placeholder.py
python-docker/{{cookiecutter.name}}/: .gitignore  Dockerfile  requirements.txt  setup.py
python-docker/{{cookiecutter.name}}/tests/: test_placeholder.py
python-docker/{{cookiecutter.name}}/{{cookiecutter.module_name}}/: __init__.py
python-docker/{{cookiecutter.package_name}}/: .flake8  Dockerfile  MANIFEST.in  README.md  pyproject.toml
python-library/: cookiecutter.json
python-library/{{cookiecutter.name}}/: .gitignore  README.md  requirements.txt  setup.py
python-library/{{cookiecutter.name}}/{{cookiecutter.module_name}}/: __init__.py
python-library/{{cookiecutter.package_name}}/: pyproject.toml
template/: .gitignore.jinja  MANIFEST.in.jinja  README.md.jinja  pyproject.toml.jinja  {% if application %}.containerignore{% endif %}  {% if application %}Containerfile{% endif %}.jinja  {% if license == "bsd" %}LICENSE.txt{% endif %}.jinja  {% if license == 'apache' %}LICENSE.txt{% endif %}.jinja  {% if license == 'mit' %}LICENSE.txt{% endif %}.jinja  {% if license in ('gpl', 'lgpl') %}COPYING{% endif %}.jinja  {% if project_type == "application" %}.containerignore{% endif %}  {% if project_type == "application" %}Containerfile{% endif %}.jinja
template/src/{{ module_path }}/: {% if cli %}__main__.py{% endif %}.jinja  {% if project_type != "stub" %}__init__.py{% endif %}.jinja
template/{{ package_name }}/: .gitignore  README.md.jinja  pyproject.toml.jinja  {% if license == "bsd" %}LICENSE.txt{% endif %}.jinja  {% if license == "mit" %}LICENSE.txt{% endif %}.jinja  {% if project_type == "docker" %}.dockerignore{% endif %}  {% if project_type == "docker" %}Dockerfile{% endif %}.jinja
